--- a/src/02_基础/SUI MOVE上具有能力的类型/自定义类型和功能.md
+++ b/src/02_基础/SUI MOVE上具有能力的类型/自定义类型和功能.md
@@ -33,8 +33,8 @@ struct Color has key, store {
 
 能力有四种类型。
 
-1. `copy` ：此功能允许复制值。
-2. `drop` ：此功能允许丢弃或弹出值。
+1. `copy` ：允许复制值。
+2. `drop` ：允许丢弃或自动析构。
 3. `store` ：此功能允许值存在于全局存储的结构内部。
 4. `key` ：此功能允许类型充当全局存储的密钥。
 
