--- a/src/02_基础/2.4_SUI MOVE基础知识/01_如何声明变量和常量？.md
+++ b/src/02_基础/2.4_SUI MOVE基础知识/01_如何声明变量和常量？.md
@@ -23,14 +23,14 @@ let d : u8 = 10;
 
 很简单，不是吗？请记住，我们使用 `struct` 关键字声明了一个对象，但要初始化该对象，我们需要使用 `let` 关键字。这是一个例子：
 
-```rust
+```move
 module hello_world::hello_world {
 	// Importing object module
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
 
 	// Declaring HelloWorldObject
-	struct HelloWorldObject has key {
+	public struct HelloWorldObject has key {
 		id: UID,
 	}
 
