--- a/src/02_基础/2.4_SUI MOVE基础知识/02_数据类型.md
+++ b/src/02_基础/2.4_SUI MOVE基础知识/02_数据类型.md
@@ -23,13 +23,13 @@ b = 300
 
 以下是如何在 Move 中使用数据类型。
 
-```rust
+```move
 module examples::integers {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
 
 	// Declaring the ExampleObject
-	struct ExampleObject has key {
+	public struct ExampleObject has key {
 		id: UID,
 		a: u8,
 		b: u16
@@ -62,13 +62,13 @@ let c : bool = true;
 
 以下是如何在 Move on Sui 中使用它们。
 
-```rust
+```move
 module examples::boolean {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
 
 	// Declaring the ExampleObject
-	struct ExampleObject has key {
+    public struct ExampleObject has key {
 		id: UID,
 		a: u8,
 		flag: bool,
@@ -105,7 +105,7 @@ module examples::boolean {
 
 在 Sui Move 中，您需要一个外部模块 `std::string` 来处理字符串并将字符串类型数据类型定义为变量。让我们看看如何与他们合作。
 
-```rust
+```move
 module examples::strings {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
@@ -114,7 +114,7 @@ module examples::strings {
 	use std::string::{Self, String};
 
 	// Declaring the ExampleObject
-	struct ExampleObject has key {
+	public struct ExampleObject has key {
 		id: UID,
 		name: String,
 	}
@@ -149,7 +149,7 @@ let addr = @0x2;
 
 要将地址传递给函数或在对象中定义地址，您需要在 Move 中使用名为 `address` 的关键字。以下是您可以如何做到这一点。
 
-```rust
+```move
 module examples::address {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
@@ -158,7 +158,7 @@ module examples::address {
 	use std::string::{Self, String};
 
 	// Declaring the ExampleObject
-	struct ExampleObject has key {
+	public struct ExampleObject has key {
 		id: UID,
 		addr: address,
 	}
