--- a/src/02_基础/2.5_SUI MOVE函数/01_函数基础知识.md
+++ b/src/02_基础/2.5_SUI MOVE函数/01_函数基础知识.md
@@ -70,7 +70,7 @@ module math::math {
 
 这里， `sum` 函数返回 `a + b` 的值。让我们看另一个例子。
 
-```rust
+```move
 module examples::strings {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
@@ -79,7 +79,7 @@ module examples::strings {
 	use std::string::{Self, String};
 		
 	// Declaring the Name
-	struct Name has key {
+	public struct Name has key {
 		id: UID,
 		name: String,
 	}
