--- a/src/02_基础/2.5_SUI MOVE函数/02_有哪些不同的可见性说明符？.md
+++ b/src/02_基础/2.5_SUI MOVE函数/02_有哪些不同的可见性说明符？.md
@@ -10,7 +10,7 @@
 
 默认情况下，函数可见性设置为私有，这意味着该函数只能由同一模块访问，但不能在模块外部访问。让我们看下面的例子。
 
-```rust
+```move
 module examples::math {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
@@ -19,7 +19,7 @@ module examples::math {
 	use std::string::{Self, String};
 
 	// Declaring the Name
-	struct Numbers has key {
+	public struct Numbers has key {
 		id: UID,
 		a: u8,
 		b: u8,
@@ -45,7 +45,7 @@ module examples::math {
 
 您可以将 `public` 关键字与 Sui Move 函数一起使用以将其公开。公共函数可以在模块外部访问，这意味着其他模块（也称为它们的函数）也可以访问公共函数。让我们在最后一个示例中添加一个公共函数。
 
-```rust
+```move
 module examples::math {
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
@@ -54,7 +54,7 @@ module examples::math {
 	use std::string::{Self, String};
 
 	// Declaring the Name
-	struct Numbers has key {
+	public struct Numbers has key {
 		id: UID,
 			a: u8,
 			b: u8,
