--- a/src/02_基础/2.6_SUI MOVE上具有能力的类型/01_自定义类型和功能.md
+++ b/src/02_基础/2.6_SUI MOVE上具有能力的类型/01_自定义类型和功能.md
@@ -44,14 +44,14 @@ struct Color has key, store {
 
 `key` 能力允许类型充当全局存储操作的键。这意味着要对全局存储执行某些操作，我们必须向该类型添加 `key` 功能。如果结构具有 `key` 能力，则意味着其所有字段都具有 `store` 能力。以下是我们如何在 Move on Sui 的代码中使用它。
 
-```rust
+```move
 module examples:: copy {
 	// Importing object module
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
 
 	// Declaring ExampleObject
-	struct ExampleObject has key {
+	public struct ExampleObject has key {
 		id: UID,
 	}
 
@@ -70,14 +70,14 @@ module examples:: copy {
 
 `store` 能力是《Move on Sui》中的一个重要能力。在 Move on Sui 中，在 `key` 旁边添加 `store` 是一个很好的做法。存储能力允许结构及其字段存在于全局存储中。这是唯一不需要执行操作的功能，但与 `key` 功能一起使用时，它会自动控制全局存储中类型的存在。以下是我们如何在 Move on Sui 的代码中使用它。
 
-```rust
+```move
 module examples:: copy {
 	// Importing object module
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
 
 	// Declaring ExampleObject
-	struct ExampleObject has key, store {
+	public struct ExampleObject has key, store {
 		id: UID,
 	}
 
@@ -98,14 +98,14 @@ module examples:: copy {
 
 复制能力赋予对象被复制的能力。这意味着它使对象能够使用 `copy` 运算符进行自身复制。让我们看看如何在代码中使用它。
 
-```rust
+```move
 module examples:: copy {
 	// Importing object module
 	use sui::object::UID;
 	use sui::tx_context::{Self, TxContext};
 
 	// Declaring ExampleObject
-	struct ExampleObject has key, copy {
+	public struct ExampleObject has key, copy {
 		id: UID,
 	}
 
