--- a/src/02_基础/2.9_SUI MOVE上的先进概念/02_对象包装.md
+++ b/src/02_基础/2.9_SUI MOVE上的先进概念/02_对象包装.md
@@ -36,7 +36,7 @@ struct Bar has key, store {
 让我们看一个例子。假设您在 Sui 中有一种名为 `Object` 的 NFT 样式对象，它具有 `scarcity` 和 `style` 等属性。为了确保公平交易，你需要确保稀缺性相同，只有款式不同。这是因为 NFT 的稀缺性越高，其价值就越高。以下是实现它的方法：
 
 ```rust
-struct Object has key, store {
+public struct Object has key, store {
     id: UID,
     scarcity: u8,
     style: u8,
@@ -57,7 +57,7 @@ public entry fun create_object(scarcity: u8, style: u8, ctx: &mut TxContext) {
 现在，您可能还记得前面的部分，只有对象所有者才能发送交易来改变对象。因此，一个人无法发送一笔将自己的对象与他人的对象交换的交易。因此，任何想要交换其对象的人都需要将其对象发送到第三方（例如交换站点）。为了确保您保留对您的对象（例如硬币和 NFT）的保管权并且不将全部保管权交给第三方，您需要使用直接包装，如下所示：
 
 ```rust
-struct ObjectWrapper has key {
+public struct ObjectWrapper has key {
     id: UID,
     original_owner: address,
     to_swap: Object,
@@ -95,18 +95,18 @@ public entry fun request_swap(object: Object, fee: Coin<SUI>, service_address: a
 在下面的代码中，我们定义了一个带有可选 `sword` 和 `shield` 字段的 `SimpleWarrior` 类型。 `sword` 和 `shield` 是其他 Sui 对象类型。
 
 ```rust
-struct SimpleWarrior has key {
+public struct SimpleWarrior has key {
     id: UID,
     sword: Option<Sword>,
     shield: Option<Shield>,
 }
 
-struct Sword has key, store {
+public struct Sword has key, store {
     id: UID,
     strength: u8,
 }
 
-struct Shield has key, store {
+public struct Shield has key, store {
     id: UID,
     armor: u8,
 }
@@ -148,12 +148,12 @@ public entry fun equip_sword(warrior: &mut SimpleWarrior, sword: Sword, ctx: &mu
 让我们考虑一个涉及宠物和农场的例子：
 
 ```rust
-struct Pet has key, store {
+public struct Pet has key, store {
     id: UID,
     cuteness: u64,
 }
 
-struct Farm has key {
+public struct Farm has key {
     id: UID,
     pets: vector<Pet>,
 }
