--- a/src/04_dapp/4.3_搭建代币交换DAPP/01_交易池智能合约.md
+++ b/src/04_dapp/4.3_搭建代币交换DAPP/01_交易池智能合约.md
@@ -15,7 +15,7 @@ use sui::transfer;
 use sui::coin;
 use sui::tx_context::{Self, TxContext};
 
-struct ETH has drop {}
+public struct ETH has drop {}
 ```
 
 - 该代码首先导入必要的库（ `std::option` 、 `sui::url` 、 `sui::transfer` 、 `sui::coin` 、 `sui::tx_context::{Self, TxContext}` ）。
@@ -57,7 +57,7 @@ public fun init_for_testing(ctx: &mut TxContext) {
 
 `eth.move` 的完整代码是：
 
-```rust
+```move
 module dex::eth {
   use std::option;
 
@@ -66,7 +66,7 @@ module dex::eth {
   use sui::coin;
   use sui::tx_context::{Self, TxContext};
 
-  struct ETH has drop {}
+  public struct ETH has drop {}
 
   fun init(witness: ETH, ctx: &mut TxContext) {
       let (treasury_cap, metadata) = coin::create_currency<ETH>(
