--- a/src/05_loyalty/5.3_搭建忠诚度DAPP/01_编写忠诚度智能合约.md
+++ b/src/05_loyalty/5.3_搭建忠诚度DAPP/01_编写忠诚度智能合约.md
@@ -34,13 +34,13 @@ use sui::clock::Clock;
 - 在这里，我们导入包含要在代码中使用的预构建函数和类型的模块。
 
 ```rust
-struct LoyaltyAccount has key, store {
+public struct LoyaltyAccount has key, store {
     id: UID,
     stake: Balance<DEX>,
     points: u64
   }
-  
-  struct NFT has key, store {
+
+public struct NFT has key, store {
     id: UID
   }
 ```
@@ -135,7 +135,7 @@ public fun stake(
 
 最终合同应如下所示：
 
-```rust
+```move
 module loyalty::loyalty {
   
   use sui::clock::Clock;
@@ -153,7 +153,7 @@ module loyalty::loyalty {
 
   const ENeeds5Points: u64 = 0;
 
-  struct LoyaltyAccount has key, store {
+  public struct LoyaltyAccount has key, store {
     id: UID,
     // Amount of DEX Coin staked in the program
     stake: Balance<DEX>,
@@ -161,7 +161,7 @@ module loyalty::loyalty {
     points: u64
   }
   
-  struct NFT has key, store {
+  public struct NFT has key, store {
     id: UID
   }
 
