--- a/src/02_基础/2.11_总结/01_总结.md
+++ b/src/02_基础/2.11_总结/01_总结.md
@@ -14,9 +14,9 @@
 
 函数是任何程序的核心，您已经学习了如何使用不同的可见性说明符创建它们。您还掌握了功能设计的基础知识，这对于制定有效且高效的智能合约至关重要。
 
-## SUI MOVE的对象
+## move的对象
 
-对象是 Sui Move 的基础，您现在知道如何在合约中声明和使用它们。对象可组合性的概念使您能够创建复杂的模块化应用程序。
+对象是 move 的基础，您现在知道如何在合约中声明和使用它们。对象可组合性的概念使您能够创建复杂的模块化应用程序。
 
 ## Move on Sui 中的控制流程
 
