--- a/src/02_基础/2.2_在SUI上部署第一个 hello world合约/01_设置开发环境.md
+++ b/src/02_基础/2.2_在SUI上部署第一个 hello world合约/01_设置开发环境.md
@@ -1,6 +1,6 @@
 # 设置开发环境
 
-欢迎回来！我希望您喜欢学习 Sui 和 Move 编程语言。在本课中，我将指导您设置开发环境以在系统上运行 Sui MOVE 程序。在我们深入研究之前，确保您已在系统上安装了所有必要的先决条件至关重要。不用担心！我将为您提供特定系统的安装说明。因此，请随意滚动浏览课程以找到相关的安装指南。
+欢迎回来！我希望您喜欢学习 Sui 和 Move 编程语言。在本课中，我将指导您设置开发环境以在系统上运行 move 程序。在我们深入研究之前，确保您已在系统上安装了所有必要的先决条件至关重要。不用担心！我将为您提供特定系统的安装说明。因此，请随意滚动浏览课程以找到相关的安装指南。
 
 
 
@@ -34,7 +34,7 @@ brew install git
 
 ## 在Linux上安装的准备 
 
-现在，让我们来看看在 Linux 系统上安装 Sui MOVE 时需要准备什么
+现在，让我们来看看在 Linux 系统上安装 move 时需要准备什么
 
 使用以下命令进行更新 `apt-get` 
 
@@ -98,7 +98,7 @@ sudo apt-get install build-essential
 
 ## 在Windows安装的准备
 
-让我们来看看在 Windows 上安装 Sui MOVE 需要准备什么
+让我们来看看在 Windows 上安装 move 需要准备什么
 
 1、Windows 11 已经安装了 Microsoft 版本 `cURL` 的 .
 
