--- a/src/02_基础/2.4_SUI MOVE基础知识/01_如何声明变量和常量？.md
+++ b/src/02_基础/2.4_SUI MOVE基础知识/01_如何声明变量和常量？.md
@@ -1,6 +1,6 @@
 # 如何声明变量和常量？
 
-在上一节中，您了解了  Sui MOVE 包的架构，并了解了  Sui MOVE中智能合约的结构基础知识。现在，我们将探索  Sui MOVE的更多基础知识。
+在上一节中，您了解了  move 包的架构，并了解了  move中智能合约的结构基础知识。现在，我们将探索  move的更多基础知识。
 
 ##  `let` 关键字
 
@@ -12,7 +12,7 @@ let <Variable> = <Expression>
 let <Variable> : <Type> = <Expression>
 ```
 
-现在让我们看一些例子。无需担心类型，我们将在几分钟内讨论它们。请记住，在 Sui MOVE 中必须添加分号。
+现在让我们看一些例子。无需担心类型，我们将在几分钟内讨论它们。请记住，在 move 中必须添加分号。
 
 ```rust
 let a;
@@ -78,7 +78,7 @@ module examples::example {
 
 ## 小结
 
-变量和常量在 Move on Sui 中发挥着重要作用。它们用于定义对象并存储关键信息。接下来，我们将探索可在 Sui MOVE 中使用的不同数据类型。
+变量和常量在 Move on Sui 中发挥着重要作用。它们用于定义对象并存储关键信息。接下来，我们将探索可在 move 中使用的不同数据类型。
 
 
 
