--- a/src/02_基础/2.4_SUI MOVE基础知识/02_数据类型.md
+++ b/src/02_基础/2.4_SUI MOVE基础知识/02_数据类型.md
@@ -50,7 +50,7 @@ module examples::integers {
 
 ##  布尔值
 
-在  Sui MOVE 中，布尔值的工作方式与其他编程语言中相同。它有两个值： `true` 和 `false` 。让我们看看如何在代码中使用它们。
+在  move 中，布尔值的工作方式与其他编程语言中相同。它有两个值： `true` 和 `false` 。让我们看看如何在代码中使用它们。
 
 ```rust
 let a = true;
@@ -89,7 +89,7 @@ module examples::boolean {
 
 ##  向量
 
-Vector是一种数据结构，其工作原理类似于Sui Move中的数组。要使用向量，我们导入一个模块 `std::vector` ，并使用 `let` 来声明它。向量的格式如下： `vector<T>` ，其中 `T` 是任何数据类型。以下是如何将空向量声明为 Move。
+Vector是一种数据结构，其工作原理类似于move中的数组。要使用向量，我们导入一个模块 `std::vector` ，并使用 `let` 来声明它。向量的格式如下： `vector<T>` ，其中 `T` 是任何数据类型。以下是如何将空向量声明为 Move。
 
 ```rust
 module examples::boolean {
@@ -103,7 +103,7 @@ module examples::boolean {
 
 ##  字符串
 
-在 Sui Move 中，您需要一个外部模块 `std::string` 来处理字符串并将字符串类型数据类型定义为变量。让我们看看如何与他们合作。
+在 move 中，您需要一个外部模块 `std::string` 来处理字符串并将字符串类型数据类型定义为变量。让我们看看如何与他们合作。
 
 ```move
 module examples::strings {
@@ -133,7 +133,7 @@ module examples::strings {
 
 ##  地址
 
-在 Sui Move 中，您可以使用 `@` 符号用地址初始化变量。以下是您可以如何做到这一点。
+在 move 中，您可以使用 `@` 符号用地址初始化变量。以下是您可以如何做到这一点。
 
 ```rust
 let addr = @0x2;
@@ -179,4 +179,4 @@ module examples::address {
 
 在本课中，我们介绍了各种示例。您想尝试在您的系统上运行它们吗？您可以执行以下操作：创建一个名为 `examples` 的新模块，然后创建不同的包，例如 `integers` 、 `strings` 、 `vector` ，和 `address` es。最后，使用 `sui move build` 命令运行它们，看看会发生什么。如果您遇到任何错误，也请尝试修复它们。
 
-整数、布尔值、字符串、向量和地址是使用  Sui MOVE 时经常使用的主要数据类型。这些数据类型将帮助您构建基础并开始编写您的第一个应用程序。接下来，我们将深入研究控制流并学习如何在 Sui MOVE中使用这些数据类型。
+整数、布尔值、字符串、向量和地址是使用  move 时经常使用的主要数据类型。这些数据类型将帮助您构建基础并开始编写您的第一个应用程序。接下来，我们将深入研究控制流并学习如何在 move中使用这些数据类型。
