--- a/src/02_基础/2.5_SUI MOVE函数/01_函数基础知识.md
+++ b/src/02_基础/2.5_SUI MOVE函数/01_函数基础知识.md
@@ -1,10 +1,10 @@
 #  函数基础知识
 
-现在您已经了解了 Sui Move 的所有基础知识，让我们直接学习如何使用 Sui Move 中的函数。
+现在您已经了解了 move 的所有基础知识，让我们直接学习如何使用 move 中的函数。
 
 ##  函数定义
 
-在 Sui Move 中，函数是执行发生的地方。您可以使用 `fun` 关键字定义函数。您可能已经注意到，构造函数也是使用 `fun` 关键字定义的。让我们看看如何在 Sui Move 中定义函数。
+在 move 中，函数是执行发生的地方。您可以使用 `fun` 关键字定义函数。您可能已经注意到，构造函数也是使用 `fun` 关键字定义的。让我们看看如何在 move 中定义函数。
 
 ```rust
 fun function_name() {
@@ -16,7 +16,7 @@ fun function_name() {
 
 ##  模块中的函数
 
-如您所知，我们将所有内容编写在 Sui Move 的模块内。现在，让我们通过一个示例来看看模块内部的结构。
+如您所知，我们将所有内容编写在 move 的模块内。现在，让我们通过一个示例来看看模块内部的结构。
 
 ```rust
 module examples::example {
@@ -48,7 +48,7 @@ module examples::example {
 
 ##  函数返回
 
-由于我们都喜欢从函数返回值，Sui Move 也可以做到这一点。为了定义函数的返回类型，我们在括号外提及数据类型： `fun fun_name(): data_type {}` 。让我们看一下编码示例。
+由于我们都喜欢从函数返回值，move 也可以做到这一点。为了定义函数的返回类型，我们在括号外提及数据类型： `fun fun_name(): data_type {}` 。让我们看一下编码示例。
 
 ```rust
 module examples::example {
@@ -58,7 +58,7 @@ module examples::example {
 }
 ```
 
-现在，我们如何从函数返回一个值？为此，我们不需要 Sui Move 中的 `return` 关键字。我们只需编写一个表达式、一个变量名和一个返回任意值的函数名，函数末尾无需任何其他关键字。让我们看一下编码示例。
+现在，我们如何从函数返回一个值？为此，我们不需要 move 中的 `return` 关键字。我们只需编写一个表达式、一个变量名和一个返回任意值的函数名，函数末尾无需任何其他关键字。让我们看一下编码示例。
 
 ```rust
 module math::math {
@@ -98,7 +98,7 @@ module examples::strings {
 
 ##  小结
 
-函数在任何编程语言中都发挥着重要作用。因此，了解每种编程语言如何使用函数非常重要。接下来，我们将探讨函数的可见性说明符，以涵盖在 Sui Move 中使用函数的高级主题
+函数在任何编程语言中都发挥着重要作用。因此，了解每种编程语言如何使用函数非常重要。接下来，我们将探讨函数的可见性说明符，以涵盖在 move 中使用函数的高级主题
 
 ## quiz
 
