--- a/src/02_基础/2.5_SUI MOVE函数/02_有哪些不同的可见性说明符？.md
+++ b/src/02_基础/2.5_SUI MOVE函数/02_有哪些不同的可见性说明符？.md
@@ -1,6 +1,6 @@
 # 有哪些不同的可见性说明符？
 
-现在您已经了解了函数的基础知识，让我们进一步深入探讨 Sui Move 中函数的不同方面。
+现在您已经了解了函数的基础知识，让我们进一步深入探讨 move 中函数的不同方面。
 
 ##  功能可见性
 
@@ -43,7 +43,7 @@ module examples::math {
 
 ###  公有函数
 
-您可以将 `public` 关键字与 Sui Move 函数一起使用以将其公开。公共函数可以在模块外部访问，这意味着其他模块（也称为它们的函数）也可以访问公共函数。让我们在最后一个示例中添加一个公共函数。
+您可以将 `public` 关键字与 move 函数一起使用以将其公开。公共函数可以在模块外部访问，这意味着其他模块（也称为它们的函数）也可以访问公共函数。让我们在最后一个示例中添加一个公共函数。
 
 ```move
 module examples::math {
@@ -83,7 +83,7 @@ module examples::math {
 
 ##  输入函数
 
-在Sui Move中，基本操作之一是代表各个用户的地址之间的gas对象传输。当您进行交易时， `entry` 函数是直接调用的。要初始化 `entry` 函数，我们需要确保以下三件事。
+在move中，基本操作之一是代表各个用户的地址之间的gas对象传输。当您进行交易时， `entry` 函数是直接调用的。要初始化 `entry` 函数，我们需要确保以下三件事。
 
 1. 该函数应由 `entry` 关键字标记。
 2. 它不应该有返回值。
@@ -105,8 +105,8 @@ public entry fun mint(ctx: &mut TxContext) {
 
 ## 小结
 
-功能可见性和入口功能在Sui Move中起着至关重要的作用。通过了解它们，您已经很厉害了。现在，我们需要更深入地研究 Sui Move 对象。让我们深入探讨一下。
+功能可见性和入口功能在move中起着至关重要的作用。通过了解它们，您已经很厉害了。现在，我们需要更深入地研究 move 对象。让我们深入探讨一下。
 
 ## quiz
 
-### 提供一个编码示例，演示 Sui Move 模块中公共函数的使用。
+### 提供一个编码示例，演示 move 模块中公共函数的使用。
