--- a/src/02_基础/2.9_SUI MOVE上的先进概念/02_对象包装.md
+++ b/src/02_基础/2.9_SUI MOVE上的先进概念/02_对象包装.md
@@ -4,7 +4,7 @@
 
 ##  对象包装
 
-在 Sui Move 编程语言中，您可以通过一种称为包装的方法将一个数据结构放入另一个数据结构中来组织数据结构。想象一下，这就像一个工具箱，里面装有不同的物品。在 Sui Move 中，您可以通过将 `struct` 类型的字段放在另一个字段中来组织数据结构，如下所示：
+在 move 编程语言中，您可以通过一种称为包装的方法将一个数据结构放入另一个数据结构中来组织数据结构。想象一下，这就像一个工具箱，里面装有不同的物品。在 move 中，您可以通过将 `struct` 类型的字段放在另一个字段中来组织数据结构，如下所示：
 
 ```rust
 struct Foo has key {
@@ -20,7 +20,7 @@ struct Bar has key, store {
 
 对于要成为 Sui 对象的结构，它应该具有 `key` 能力。现在，如果将 `Bar` 类型的 Sui 对象放入 `Foo` 类型的 Sui 对象中，则对象类型 `Foo` 会包装对象类型 `Bar` .对象类型 `Foo` 是包装器或包装对象。
 
-在 Sui Move 代码中，您可以将 Sui 对象作为非 Sui 对象结构类型的字段。
+在 move 代码中，您可以将 Sui 对象作为非 Sui 对象结构类型的字段。
 
 - 想象一下，您有一个名为“Foo”的结构，它不是 Sui 对象，还有另一个名为“Bar”的结构，它是具有“key”和“store”功能的 Sui 对象。您可以将“Bar”放入“Foo”中，但这只是暂时的，不会持久保留在区块链上。
 - 当你包装一个对象时，它就成为包装对象数据的一部分。这意味着您无法通过其唯一 ID 查找它，也无法将包装对象作为区块链交易中的参数传递。访问它的唯一方法是通过包装它的对象。
