--- a/src/04_dapp/4.1_开始/01_我们今天学习什么？.md
+++ b/src/04_dapp/4.1_开始/01_我们今天学习什么？.md
@@ -2,7 +2,7 @@
 
 大家好☀️，今天我们非常高兴为 Metaschool 的开发者带来有关 Sui 区块链的详细系列的第四门课程。让我们从第四门课程开始，祝贺您完成了 Sui 的前三门课程。呜呼！
 
-那么，我们今天要建造什么？我们将使用 Sui move 构建一个代币交换 Defi 应用程序，这将帮助用户在 dex 中实现交换功能。该 dApp 将帮助您将以太坊代币与 USDC 代币进行交换。该项目将帮助您学习使用 Move on Sui 构建端到端 defi 应用程序。
+那么，我们今天要建造什么？我们将使用 move 构建一个代币交换 Defi 应用程序，这将帮助用户在 dex 中实现交换功能。该 dApp 将帮助您将以太坊代币与 USDC 代币进行交换。该项目将帮助您学习使用 Move on Sui 构建端到端 defi 应用程序。
 
 让我们看看您的 Dex dApp 会是什么样子。
 
