--- a/src/04_dapp/4.5_前端/03_与前端交互.md
+++ b/src/04_dapp/4.5_前端/03_与前端交互.md
@@ -1,6 +1,6 @@
 # 与前端交互
 
-您已成功设置前端的所有内容，但还剩下最后一步。在本课中，我们将配置 ZK 登录凭证、运行前端、探索其功能，并学习如何通过前端与 Sui Move 合约交互。
+您已成功设置前端的所有内容，但还剩下最后一步。在本课中，我们将配置 ZK 登录凭证、运行前端、探索其功能，并学习如何通过前端与 move 合约交互。
 
 ## 设置ZK登录
 
