--- a/src/05_loyalty/5.1_开始/01_我们今天学习什么？.md
+++ b/src/05_loyalty/5.1_开始/01_我们今天学习什么？.md
@@ -2,7 +2,7 @@
 
  大家好☀️，今天我们非常高兴为 Metaschool 的开发者带来有关 Sui 区块链的详细系列的第五门课程。让我们从第五门课程开始，祝贺您完成了 Sui 的前四门课程。呜呼！
 
-那么我们今天要学习什么？我们将使用 Sui Move 构建忠诚度智能合约，然后将其部署在 Sui 区块链上。
+那么我们今天要学习什么？我们将使用 move 构建忠诚度智能合约，然后将其部署在 Sui 区块链上。
 
 该忠诚度智能合约将使我们能够为我们的 dex dApp 实施忠诚度计划。忠诚度计划通过向 NFT 等用户提供独特的奖励，帮助您的 dex dApp 与其他应用程序区分开来。
 
