feat: fix error

--- a/src/01_概念/1.1_开始/01_我们今天学什么.md
+++ b/src/01_概念/1.1_开始/01_我们今天学什么.md
@@ -30,9 +30,9 @@
 
 作为一名开发人员，通过完成本课程，您可以期望获得以下结果:
 
-了解SUI的独特之处
+了解Sui的独特之处
 
-学习SUI体系结构的价值主张
+学习Sui体系结构的价值主张
 
 通过SuixMetaschool Discord House探索Sui生态系统中的机会
 
