--- a/src/01_概念/1.3_结束/结束.md
+++ b/src/01_概念/1.3_结束/结束.md
@@ -6,9 +6,9 @@
 
 
 
-## 对SUI区块链的理解
+## 对Sui区块链的理解
 
-您获得了Sui区块链的基本知识。你了解了SUI使用了什么共识机制，解决了什么问题，以及Sui的详细历史。让我们回忆一下我们对Sui的了解。Sui是一个无权限的Layer-1区块链。与现有的以太坊和比特币等第一层区块链不同，Sui提供闪电般的交易，可预测的费用和动态数字资产的完全所有权。
+您获得了Sui区块链的基本知识。你了解了Sui使用了什么共识机制，解决了什么问题，以及Sui的详细历史。让我们回忆一下我们对Sui的了解。Sui是一个无权限的Layer-1区块链。与现有的以太坊和比特币等第一层区块链不同，Sui提供闪电般的交易，可预测的费用和动态数字资产的完全所有权。
 
 
 
