--- a/src/02_基础/2.11_总结/01_总结.md
+++ b/src/02_基础/2.11_总结/01_总结.md
@@ -26,7 +26,7 @@
 
 通过深入研究事件日志记录和对象包装等更高级的主题，您可以深入了解如何使您的合约更加通用和信息丰富。
 
-## SUI练习
+## Sui练习
 
 为了测试您的知识，您面临着开发计算器合约的挑战。这一挑战的解决方案使您能够实际了解如何在现实场景中应用您的技能。
 
