--- a/src/02_基础/2.9_Sui MOVE上的先进概念/02_对象包装.md
+++ b/src/02_基础/2.9_Sui MOVE上的先进概念/02_对象包装.md
@@ -61,7 +61,7 @@ public struct ObjectWrapper has key {
     id: UID,
     original_owner: address,
     to_swap: Object,
-    fee: Balance<SUI>,
+    fee: Balance<Sui>,
 }
 ```
 
@@ -70,7 +70,7 @@ public struct ObjectWrapper has key {
 要请求交换，您需要定义一个入口函数：
 
 ```rust
-public entry fun request_swap(object: Object, fee: Coin<SUI>, service_address: address, ctx: &mut TxContext) {
+public entry fun request_swap(object: Object, fee: Coin<Sui>, service_address: address, ctx: &mut TxContext) {
     assert!(coin::value(&fee) >= MIN_FEE, 0);
     let wrapper = ObjectWrapper {
         id: object::new(ctx),
