--- a/src/03_token/3.2_设置环境/01_设置环境.md
+++ b/src/03_token/3.2_设置环境/01_设置环境.md
@@ -56,7 +56,7 @@ sui client active-address
    sui client switch --address [YOUR_ADDRESS]
    ```
 
-2. 前往  [Sui Devnet faucet discord channel](https://discord.com/channels/916379725201563759/971488439931392130) 频道并粘贴“!faucet [YOUR_ADDRESS]”即可接收 10 个 SUI 代币。
+2. 前往  [Sui Devnet faucet discord channel](https://discord.com/channels/916379725201563759/971488439931392130) 频道并粘贴“!faucet [YOUR_ADDRESS]”即可接收 10 个 Sui 代币。
 
 ## 小结
 
