--- a/src/05_loyalty/5.2_设置环境/01_设置环境.md
+++ b/src/05_loyalty/5.2_设置环境/01_设置环境.md
@@ -67,7 +67,7 @@ sui client active-address
    sui client switch --address [YOUR_ADDRESS]
    ```
 
-2. 前往 [Sui Testnet faucet discord ](https://discord.com/channels/916379725201563759/1037811694564560966)频道并粘贴“!faucet [YOUR_ADDRESS]”以接收 10 个 SUI 代币。
+2. 前往 [Sui Testnet faucet discord ](https://discord.com/channels/916379725201563759/1037811694564560966)频道并粘贴“!faucet [YOUR_ADDRESS]”以接收 10 个 Sui 代币。
 
 ## 小结
 
