--- a/src/05_loyalty/5.5_前端/02_与前端交互.md
+++ b/src/05_loyalty/5.5_前端/02_与前端交互.md
@@ -18,7 +18,7 @@ yarn dev
 
 让我们尝试一下应用程序的不同功能，看看它是如何工作的。
 
-1. 首先，点击“Mint SUI”按钮来增加您的 SUI 余额。
+1. 首先，点击“Mint Sui”按钮来增加您的 Sui 余额。
 2. 要填充您的 USDC 和 ETH 余额，请分别单击“铸造 ETH”和“铸造 USDC”按钮。
 3. 在兑换之前，需要增加余额，因为没有任何 ETH 或 USDC，您将无法兑换代币。
 4. 要交换代币，请填写余额并单击“交换”按钮。
