--- a/src/04_dapp/4.5_前端/01_设置前端.md
+++ b/src/04_dapp/4.5_前端/01_设置前端.md
@@ -48,7 +48,7 @@ yarn install
 
    ## 设置环境变量
 
-   为什么我们还需要 dex 包 ID？我们需要 ID 将 Move 项目与前端连接起来。请记住，我们在上一课中讨论过，要运行 dex 应用程序，我们需要一个池。因此，请转到克隆前端中的 `.env` 文件，并使用以下包 ID，因为此包 ID 已经用 100 SUI 填充了池，以方便您使用。
+   为什么我们还需要 dex 包 ID？我们需要 ID 将 Move 项目与前端连接起来。请记住，我们在上一课中讨论过，要运行 dex 应用程序，我们需要一个池。因此，请转到克隆前端中的 `.env` 文件，并使用以下包 ID，因为此包 ID 已经用 100 Sui 填充了池，以方便您使用。
 
    ```rust
    DEX_PACKAGE_ID=0xa1dce324bcf781692a358adb27bd105844231d35863b5c99f94e54801d653788
